--- a/JPCompcombr/package.json
+++ b/JPCompcombr/package.json
@@ -20,6 +20,7 @@
     "@types/minimatch": "^5.1.2",
     "@types/node": "^18.15.3",
     "@types/node-fetch": "^2.6.4",
-    "@types/q": "^1.5.5"
+    "@types/q": "^1.5.5",
+    "typescript": "^5.9.3"
   }
 }
